--- a/068/ggsearch.html
+++ b/068/ggsearch.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="https://www.google.com.vn/search">
+    <form action="https://www.bing.com.vn/search" method="POST">
         <input type="text" name="q" />
         <input type="submit" value="Tìm kiếm" />
     </form>
